# llm

./: .env_example  README.md  embeddings.ipynb  practice_chains.ipynb  practice_chains.py  practice_llm.ipynb  practice_llm.py  pyproject.toml
data_loaders/: data_loaders.ipynb  data_loaders.py
